public/css/slideshow.css
.slides-container {

    position: relative;
    
}


#slideshow-struct-container{
	display: flex;
	flex-direction: column;
	justify-content: center;
}

/* Hide the images by default */

.mySlides {

    display: none;
    position: relative;

    align-items: center; /* Note : flex display is set in Slideshow Javascript */
    justify-content: center;
}

.image-slide-wrapper {

    position: relative;  /* necessary for Zoom Lens js */
}

.mySlides, .image-slide-wrapper {

    height: 400px;
}


.image-slide-wrapper > img {
    
    max-height: 100%;
    max-width: 100%;
    display: block;
    margin: auto;
    border-radius: 6px;

}


.slide-content-licence {
	background: rgba(0,0,0,.7);
	color: #ccc;
	display: inline-block;
	font-size: 11px;
	font-family: helvetica;
	font-weight: 700;
	position: absolute;
	bottom: 0;
	padding: 0px 9px;
}

/* Next & previous buttons */
.prev,
.next {
    
    cursor: pointer;
    position: absolute;
    top: 170px;

    font-weight: bold;

    user-select: none;
    -webkit-user-select: none;

    width: 50px;
    height: 50px;

    border-radius: 50%;
    font-size: 20px;
    color: #fff !important;
    line-height: 50px;
    text-align: center;
    background-color: rgba(160, 160, 160, 0.3);

    z-index: 5;
}

/* Position the "previous button" to the left */
.prev {
    margin-left:10px;
}

/* Position the "next button" to the right */
.next {
    right: 0;
    margin-right:10px;
}

.SlideImageThumbnail{
    width: 65px; 
    height: 40px;
    border-radius: 0.25rem;
}

.thumbnail-video-icon{
    position: absolute;
    bottom:3px;
    left:3px;
    padding: 0.5rem;
    border-radius: 50%;
    background-color: #dc3545;
}




/* On hover, add a black background color with a little bit see-through */
.prev:hover,
.next:hover {
    background-color: rgba(0, 0, 0, 0.8);
}


/* Container for Captions */

.caption-container {

    display: flex;
    align-items: center;

    min-height: 72px;

    margin-top: 5px;
    margin-bottom: 10px;
    
    font-size: 1.12em;
    line-height: 1.3;

}


.caption-container span {

    width: 100%;

    text-align: center  ;
    margin-bottom: 0;
    padding: 0 8%;
}

.caption {

    display: none; /* Avoid loading visual glitch */

}


.caption-container.no-caption{

    display: none;

}


.thumbnails-container{

    background-color:inherit;

}

/* 
.thumbnail {

    display: flex;
    justify-content: center;
    cursor: pointer;
    opacity: 0.8;
} */


.active,
.thumbnail:hover {

    opacity: 1;

}

/* Position edit slide button on tiny screen */

    .edit-slide-button{
        top: 0;
        right:40px;
        width:30px;
        height:30px;
        position: absolute; 
        bottom:0; 
        right:0; 
        background-color: white;
    }


    /* Specific display when only one slide */
        
    #slides.only-one-slide .thumbnails-container{

        display: none;

    }

    #slides.only-one-slide .slides-container{

        max-width: 640px !important;
        margin: auto;

    }

    #slides.only-one-slide .caption-container{

        width: 100% !important;

    }


@media screen and (max-width: 580px) {
        
    #slides{
        margin-bottom: 10px;
    }

    .mySlides, .image-slide-wrapper {
        
        height: 190px;
    }

    /* Next & previous buttons */

    .prev,
    .next {
        
        top: 75px;

        width: 30px;
        height: 30px;

        font-size: 0.9em;

        line-height: 30px;
    }

    /* Position the "previous button" to the left */

    .prev {
        margin-left: -10px;
    }

    /* Position the "next button" to the right */

    .next {
        right: 0;
        margin-right:-10px;
    }
        
    .caption-container {

        min-height: 50px;
        
        font-size: 15px;
        font-weight:normal;

        margin-bottom : 7px;
          
    }
        
    .caption-container span {

        padding: 4px 0;
          
    }

    .caption-container.no-caption {

        display: flex;
        min-height: 8px;
        
    }

    /* Number text (1/3 etc) */

    .numbertext {

        z-index:10;
        
        position: absolute;
        top: 0;

        margin: 8px 12px;
        padding: 1px 2px;

        font-size: 13px;
        color:white;
        text-shadow: 3px 3px 3px rgba(0,0,0,0.5);

        background-color: rgba(0,0,0,0.3);
            
    }

}

